--- a/Bases de datos/HTML-CSS/Diseño_web_responsivo/columnas.css
+++ b/Bases de datos/HTML-CSS/Diseño_web_responsivo/columnas.css
@@ -26,9 +26,20 @@
 [class*="col-"]{
     float: left;
     position: relative;
-   
     padding: 20px;
     
+}
+
+.col-12 {
+    width: 100%;
+}
+
+.col-6{
+    width: 50%;
+}
+
+.col-4{
+    width: 33.333333333%;
 }
 
 header #logo{
@@ -36,6 +47,7 @@ header #logo{
     font-size: 50px;
     text-align: center;
     line-height: 60px;
+    
 }
 
 header center{
@@ -49,6 +61,7 @@ header center{
 header center p{
     text-align: center;
     width: 42px;
+    line-height: 42px;
     border-radius: 100%;
     background: #ccc;
     color: white;
@@ -70,13 +83,13 @@ header center#icono3 p{
 @media(min-width:1200px){
     .col-lg-12{width:100%;}
 
-    .col-lg-11{width:91.666666667%;}
+    .col-lg-11{width: 91.66666667%;}
 
     .col-lg-10{width:83.33333333%;}
 
     .col-lg-9{width:75%;}
 
-    .col-lg-8{width:66.666666666%;}
+    .col-lg-8{width:66.6666667%;}
 
     .col-lg-7{width:58.33333333%;}
 
@@ -88,11 +101,15 @@ header center#icono3 p{
 
     .col-lg-3{width:25%;}
 
-    .col-lg-2{width:16.66666667%;}
+    .col-lg-2{width:16.666667%;}
 
     .col-lg-1{width:8.333333333%;}
 
     .col-lg-0{display: none;}
+
+    #seccion4 article p img{
+        width: 50%;
+    }
 
 }
 
@@ -100,7 +117,7 @@ header center#icono3 p{
 
     .col-md-12{width:100%;}
 
-    .col-md-11{width:91.66666667%;}
+    .col-md-11{width:91.666667%;}
 
     .col-md-10{width:83.33333333%;}
 
@@ -124,22 +141,42 @@ header center#icono3 p{
 
     .col-md-0{display: none;}
 
+    #seccion4 article p img{
+        width: 60%;
+    }
+
 }
 
 @media(max-width:991px) and (min-width:768px){
     .col-sm-12{width: 100%;}
+
     .col-sm-11{width: 91.66666667%;}
+
     .col-sm-10{width: 83.33333333%;}
+
     .col-sm-9{width: 75%;}
+
     .col-sm-8{width: 66.666666666%;}
+
     .col-sm-7{width: 58.33333333%;}
+
     .col.sm-6{width: 50%;}
+
     .col-sm-5{width: 41.66666666%;}
+
     .col-sm-4{width: 33.33333333%;}
+
     .col-sm-3{width: 25%;}
+
     .col-sm-2{width: 16.66666667%;}
+
     .col-sm-1{width: 8.33333333%;}
+
     .col-sm-0{display: none;}
+
+    #seccion4 article p img{
+        width: 100%;
+    }
 }
 
 @media(max-width:767px) {
@@ -168,7 +205,12 @@ header center#icono3 p{
 
     .col-xs-1{width:8.33333333%;}
 
-    .col-sm-0{display: none;}
+    .col-xs-0{display: none;}
+
+    #seccion4 article p img{
+        width: 100%;
+        margin-bottom: 20px;
+    }
 }
 
 nav ul li {
@@ -182,6 +224,7 @@ nav ul li a {
     font-family: "Kaushan Script", cursive;
     color: white;
     line-height: 48px;
+    
 }
 
 nav ul li a:hover {
@@ -193,7 +236,7 @@ nav ul li a:active{
 }
 
 #seccion3 center{
-    padding: 20px;
+    padding: 10px;
 }
 
 #seccion3 img {
@@ -213,3 +256,51 @@ nav ul li a:active{
     padding: 10px;
 }
   
+#seccion4 aside ul li{
+    background: violet;
+    padding: 10px;
+    margin: 2px 10px;
+    list-style: square;
+    list-style-position: inside;
+}
+
+#seccion4 article h1{
+    font-family: "Kaushan Script", cursive;
+    font-size: 40px;
+    margin: 20px;
+}
+
+#seccion4 article p img{
+    float: left;
+    margin-right: 20px;
+}
+
+#seccion4 article p{
+    margin: 5px 20px;
+    font-size: 14px;
+    text-align: justify;
+}
+#seccion4 aside#der h1{
+    line-height: 50px;
+    text-align: center;
+    background: olive;
+    color: white;
+    margin-bottom: 5px;
+}
+
+#seccion4 aside#der input{
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0;
+}
+
+footer{
+    padding: 20px 10px;
+}
+
+footer div{
+    background: rgb(156, 14, 156);
+    text-align: center;
+    line-height: 50px;
+    color: white;
+}
