--- a/Proyect_final/client/styles.css
+++ b/Proyect_final/client/styles.css
@@ -8,30 +8,16 @@
 
 /*Productos*/
 
-.products {
-    width: 100%;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-}
-.products h1{
-    margin: 35px 0;
-    font-size: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-transform: uppercase;
-    background: linear-gradient(to right, rgb(27, 172, 172), rgb(71, 230, 230));
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
+.card-products-container {
+    margin: 5vh auto;
 }
 
-#shopContent{
-    display: grid;
-    width: 100%;
-    grid-template-columns: 25px 25px 25px 25px;
-    justify-content: space-between;
+.card-products {
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 
@@ -120,4 +106,61 @@
     background: linear-gradient(to right, rgb(27, 172, 172), rgb(71, 230, 230));
     color: white;
     cursor: pointer;
+}
+.cart-btn .fas {
+    position: fixed;
+    top: 90vh;
+    right: 40px;
+    padding: 5px;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    transition: transform 0.2s ease-in-out;
+    font-size: 30px;
+}
+
+.cart-btn:hover{
+    cursor: pointer;
+    
+}
+
+/*modal*/
+.modal-overlay {
+    display: none;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+}
+.modal-container {
+    display: none;
+    background-color: #ffffff;
+    box-shadow: 0px 3px 6px #00000029;
+    padding: 40px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 500px;
+    width: 100%;
+    z-index: 1;
+    max-height: 80vh;
+    overflow-y: auto;
+}
+.modal-container::-webkit-scrollbar {
+    display: none;
+}
+
+.modal-close{
+    float: right;
+    cursor: pointer;
+}
+.modal.title{
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-align: center;
 }
