--- a/Proyect_final/client/styles.css
+++ b/Proyect_final/client/styles.css
@@ -1,9 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
 
 
 /*Productos*/
@@ -30,16 +24,24 @@
     padding: 10px 20px;
     background: #f6f6f6;
     margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    position: relative;
+    
 }
 
 .tarjetas .pequeña_tarjeta {
     display: flex;
     flex-flow: column;
     position: absolute;
-    margin: 10px 0;
     transform: translateX(-20px);
     transition: 0.3s;
     opacity: 0;
+    top: 10px;
+    right: 10px;
+    gap: 5px;
 }
 
 .tarjetas:hover .pequeña_tarjeta{
@@ -52,11 +54,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 140px;
+    height: 140px;
+    overflow: hidden;
 }
 
 .tarjetas .image img{
-    width: 140px;
-    margin: 8px 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     transition: 0.3s;
 }
 
@@ -78,6 +84,12 @@
 
 .pequeña_tarjeta i:hover{
     color: aqua;
+}
+.product_text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 
 .product_text h2{
@@ -107,20 +119,40 @@
     color: white;
     cursor: pointer;
 }
-.cart-btn .fas {
+.cart-btn-container {
     position: fixed;
-    top: 90vh;
+    bottom: 10vh;
     right: 40px;
+    display: inline-block;
+}
+.cart-btn {
+    position: relative;
+    display: inline-block;
+}
+
+.cart-counter {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 5px;
+    font-size: 14px;
+    font-weight: bold;
+    display: none;
+}
+.cart-btn .fas {
+
     padding: 5px;
     border-radius: 50%;
-    height: 30px;
-    width: 30px;
     transition: transform 0.2s ease-in-out;
     font-size: 30px;
 }
 
 .cart-btn:hover{
     cursor: pointer;
+    transform: scale(1.1);
     
 }
 
@@ -151,7 +183,7 @@
     overflow-y: auto;
 }
 .modal-container::-webkit-scrollbar {
-    display: none;
+    display:flex;
 }
 
 .modal-close{
