--- a/Proyect_final/client/styles.css
+++ b/Proyect_final/client/styles.css
@@ -179,29 +179,30 @@
 /*modal*/
 .modal-overlay {
     display: none;
-    background-color: #40434A;
     position: fixed;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 1;
-}
-.modal-container {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+  }
+  .modal-container {
     display: none;
     background-color: #ffffff;
-    box-shadow: 0px 3px 6px #00000029;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.3);
     padding: 40px;
-    position: absolute;
+    position: fixed; /* Cambiado de absolute a fixed */
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     max-width: 500px;
     width: 100%;
-    z-index: 1;
+    z-index: 1000;
     max-height: 80vh;
     overflow-y: auto;
 }
+
 .modal-container::-webkit-scrollbar {
     display:none;
 }
@@ -227,8 +228,11 @@
 .product {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between; /* Espaciado uniforme */
     margin-bottom: 20px;
+    padding: 10px;
+    background-color: #f9f9f9; /* Fondo claro para separar productos */
+    border-radius: 8px;
 }
 
 .product-img {
@@ -240,8 +244,9 @@
     flex: 1;
     text-align: left;
 }
-.product-info h4{
-    margin-top: 35px;
+.product-info h4 {
+    margin: 0;
+    font-size: 18px;
 }
 
 .quantity{
