--- a/Proyect_final/client/styles.css
+++ b/Proyect_final/client/styles.css
@@ -3,21 +3,19 @@
     padding: 0;
     box-sizing: border-box;  
 }
-.audiowide-regular {
+
+body {
     font-family: "Audiowide", sans-serif;
-    font-weight: 400;
-    font-style: normal;
 }
 
-.primary{
-    background-color: #66FFFF  !important;
+.primary {
+    background-color: #66FFFF !important;
 }
 
-.nav{
-    background-color: #0000FF  !important;
+.nav {
+    background-color: #0000FF !important;
     height: 50px;
 }
-
 
 .carousel-container {
     position: relative;
@@ -33,23 +31,23 @@
 }
   
 .carousel-item {
-    display: none;
     min-width: 100%;
-    box-sizing: border-box;
-    position: relative;
     height: 300px;
+    display: none;
+    position: relative;
+}
+
+.carousel-item.active {
     display: block;
 }
-.carousel-item.active { /* Aplica la clase active aquí para mostrar el elemento */
-    display: block; /* Solo muestra el item activo */
-}
+
 .carousel-item img {
-    width: 100%; /* Hce que la imagen ocupe todo el ancho del contenedor */
-    height: 320px; /* Mantiene la relación de aspecto de la imagen */
-    object-fit: cover; /* Cubre el área sin distorción, recortando lo que sea necesario */
-    display: block; /* Asegura que no haya espacios en la parte inferior */
+    width: 100%;
+    height: 320px;
+    object-fit: cover;
+    display: block;
 }
-  
+
 .prev, .next {
     position: absolute;
     top: 50%;
@@ -60,37 +58,70 @@
     padding: 10px;
     cursor: pointer;
 }
-  
-.prev {
-    left: 10px;
-}
-  
-.next {
-    right: 10px;
-}
-  
 
-.categorias{
+.prev { left: 10px; }
+.next { right: 10px; }
+
+.categorias,
+.productos {
     font-size: 2rem;
-}
-
-.presentacion h1{
-    font-size: 35px;
-    color: #00CCFF;
-    font-weight: bold;
-    text-align: center;
-}
-
-.presentacion h2 {
-    font-size: 20px;
-    color: #00CCFF;
-    text-align: center;
     
 }
-/*Productos*/
 
-.productos{
-    font-size: 2rem;
+.presentacion h1, 
+.presentacion h2 {
+    color: #00CCFF; /* Mantiene el color original */
+    text-align: center;
+    margin: 0; /* Elimina el margen por defecto */
+    padding: 10px 0; /* Agrega espacio alrededor de los títulos */
+    text-transform: uppercase; /* Convierte el texto a mayúsculas para un toque más profesional */
+    letter-spacing: 1px; /* Espacio entre letras para mejorar la legibilidad */
+}
+
+/* Estilo para el h1 */
+.presentacion h1 {
+    font-size: 40px; /* Aumenta el tamaño del texto */
+    font-weight: bold;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); /* Agrega sombra al texto */
+    border-bottom: 2px solid #00CCFF; /* Línea debajo del título */
+    padding-bottom: 20px; /* Aumenta el espacio adicional debajo del h1 */
+    margin-bottom: 30px; /* Agrega margen inferior para más espacio */
+    animation: elegant-blink 2s infinite; /* Añade el efecto de parpadeo más elegante */
+}
+
+/* Efecto de parpadeo más elegante */
+@keyframes elegant-blink {
+    0%, 100% {
+        opacity: 1; /* Totalmente visible */
+    }
+    50% {
+        opacity: 0.8; /* Sutilmente menos visible */
+    }
+}
+
+
+/* Estilo para el h2 */
+.presentacion h2 {
+    font-size: 24px; /* Aumenta el tamaño del texto */
+    font-weight: 600; /* Un peso de fuente ligeramente más ligero que el h1 */
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2); /* Sombra más sutil para el h2 */
+    margin-top: 10px; /* Espacio adicional arriba del h2 */
+}
+
+
+.ofertas-titulo {
+    font-size: 40px; /* Aumenta el tamaño del texto */
+    font-weight: bold;
+    color: #00CCFF; /* Mantiene el color original */
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); /* Agrega sombra al texto */
+    border-bottom: 2px solid #00CCFF; /* Línea debajo del título */
+    padding-bottom: 20px; /* Espacio adicional debajo del h1 (ajusta según necesites) */
+    text-align: center; /* Asegúrate de que esté centrado */
+    margin: 0; /* Elimina el margen por defecto */
+    padding: 10px 0; /* Agrega espacio alrededor del título */
+    text-transform: uppercase; /* Convierte el texto a mayúsculas */
+    letter-spacing: 1px; /* Espacio entre letras */
+    margin-bottom: 30px; /* Agrega margen inferior para más espacio (ajusta según necesites) */
 }
 
 .card-products-container {
@@ -98,84 +129,79 @@
 }
 
 .card-products {
-    text-align: center;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
     flex-wrap: wrap;
+    justify-content: space-around;
+    text-align: center;
 }
-
 
 .card .tarjetas {
     width: 290px;
     height: 400px;
-    box-shadow: 0 0 8px #669BBC;
+    background: #FFFFFF;
     border-radius: 20px;
-    text-align: center;
-    padding: 10px 20px;
-    background: #ffffffff;
+    box-shadow: 0 0 8px #669BBC;
     margin: 10px;
+    padding: 10px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     position: relative;
-    
 }
 
 .tarjetas .pequeña_tarjeta {
     display: flex;
     flex-flow: column;
     position: absolute;
-    transform: translateX(-20px);
-    transition: 0.3s;
-    opacity: 0;
     top: 10px;
     right: 10px;
     gap: 5px;
+    opacity: 0;
+    transform: translateX(-20px);
+    transition: 0.3s;
 }
 
-.tarjetas:hover .pequeña_tarjeta{
+.tarjetas:hover .pequeña_tarjeta {
     transform: translateX(2px);
     cursor: pointer;
     opacity: 1;
 }
 
-.tarjetas .image{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.tarjetas .image {
     width: 140px;
     height: 140px;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.tarjetas .image img{
+.tarjetas .image img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: 0.3s;
+    transition: transform 0.3s;
 }
 
-.tarjetas:hover .image img{
+.tarjetas:hover .image img {
     transform: scale(1.1);
 }
 
-
-.pequeña_tarjeta i{
+.pequeña_tarjeta i {
     width: 45px;
     height: 45px;
     border-radius: 20px;
     font-size: 18px;
-    margin: 2px 0;
     line-height: 40px;
     border: 2px solid #669BBC;
-    transition: 0.2s;
+    transition: color 0.2s;
 }
 
-.pequeña_tarjeta i:hover{
+.pequeña_tarjeta i:hover {
     color: #669BBC;
 }
+
 .product_text {
     display: flex;
     flex-direction: column;
@@ -183,38 +209,41 @@
     gap: 10px;
 }
 
-.product_text h2{
+.product_text h2 {
     font-size: 30px;
     margin-top: 15px;
 }
 
-.product_text p{
+.product_text p {
     color: cadetblue;
     line-height: 21px;
     margin: 8px 0;
 }
-.product_text h3{
+
+.product_text h3 {
     margin: 7px 0;
 }
 
-.product_text .product_stars{
-    color:darkorange;
-    margin-bottom: 19px;
+.product_text .product_stars {
+    color: darkorange;
     cursor: pointer;
+    margin-bottom: 19px;
 }
 
-.product_text .btn{
-    text-decoration: none;
+.product_text .btn {
     padding: 10px 20px;
     background: rgb(102,155,188);
     cursor: pointer;
+    text-decoration: none;
 }
+
 .cart-btn-container {
     position: fixed;
     bottom: 10vh;
     right: 40px;
     display: inline-block;
 }
+
 .cart-btn {
     position: relative;
     display: inline-block;
@@ -230,23 +259,20 @@
     padding: 5px;
     font-size: 14px;
     font-weight: bold;
-    display: none;
 }
-.cart-btn .fas {
 
+.cart-btn .fas {
     padding: 5px;
+    font-size: 30px;
     border-radius: 50%;
     transition: transform 0.2s ease-in-out;
-    font-size: 30px;
 }
 
-.cart-btn:hover{
+.cart-btn:hover {
     cursor: pointer;
     transform: scale(1.1);
-    
 }
 
-/*modal*/
 .modal-overlay {
     display: none;
     position: fixed;
@@ -256,13 +282,14 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 999;
-  }
-  .modal-container {
+}
+
+.modal-container {
     display: none;
     background-color: #ffffff;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.3);
     padding: 40px;
-    position: fixed; /* Cambiado de absolute a fixed */
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -274,52 +301,53 @@
 }
 
 .modal-container::-webkit-scrollbar {
-    display:none;
+    display: none;
 }
 
-
-.modal-close{
+.modal-close {
     float: right;
     cursor: pointer;
 }
-.modal-title{
+
+.modal-title {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
     text-align: center;
 }
 
-/*Modal body*/
 .modal-body {
-    margin-bottom: 20px;
     text-align: center;
+    margin: 0 5px;
 }
 
 .product {
     display: flex;
     align-items: center;
-    justify-content: space-between; /* Espaciado uniforme */
+    justify-content: space-between;
     margin-bottom: 20px;
     padding: 10px;
-    background-color: #f9f9f9; /* Fondo claro para separar productos */
+    background-color: #f9f9f9;
     border-radius: 8px;
 }
 
 .product-img {
+    width: 80px;
     height: 80px;
     margin-right: 20px;
-    width: 80px;
 }
+
 .product-info {
     flex: 1;
     text-align: left;
 }
+
 .product-info h4 {
     margin: 0;
     font-size: 18px;
 }
 
-.quantity{
+.quantity {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -336,23 +364,13 @@
 }
 
 .quantity-input {
+    width: 50px;
     color: #333333;
     font-size: 16px;
-    padding: 10 10px;
     text-align: center;
-    width: 50px;
     font-weight: bold;
 }
 
-@media only screen and (max-width:500px){
-    .product-img {
-        display: none;
-    }
-    .modal-body {
-        margin-left: 5px;
-        margin-right: 5px;
-    }
-}
 .price {
     font-size: 20px;
     font-weight: bold;
@@ -364,12 +382,28 @@
     margin-left: 2em;
     cursor: pointer;
 }
+
 .modal-footer {
     text-align: center;
 }
+
 .total-price {
     font-size: 20px;
     font-weight: bold;
     margin-top: 20px;
     margin-bottom: 10px;
+}
+
+@media (max-width: 768px) {
+    .presentacion h1 {
+        font-size: 30px; /* Reduce el tamaño del h1 en pantallas más pequeñas */
+    }
+    
+    .presentacion h2 {
+        font-size: 20px; /* Reduce el tamaño del h2 en pantallas más pequeñas */
+    }
+
+    .card .tarjetas {
+        width: 100%; /* Hace que la tarjeta ocupe el 100% del ancho en pantallas más pequeñas */
+    }
 }
