--- a/Proyect_final/client/styles.css
+++ b/Proyect_final/client/styles.css
@@ -4,12 +4,16 @@
     box-sizing: border-box;  
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "Audiowide", sans-serif;
 }
 
 .primary {
-    background-color: #66FFFF !important;
+    background-color: #0000FF !important;
 }
 
 .nav {
@@ -70,7 +74,7 @@ body {
 
 .presentacion h1, 
 .presentacion h2 {
-    color: #00CCFF; /* Mantiene el color original */
+    color: #40434A; /* Mantiene el color original */
     text-align: center;
     margin: 0; /* Elimina el margen por defecto */
     padding: 10px 0; /* Agrega espacio alrededor de los títulos */
@@ -83,7 +87,7 @@ body {
     font-size: 40px; /* Aumenta el tamaño del texto */
     font-weight: bold;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); /* Agrega sombra al texto */
-    border-bottom: 2px solid #00CCFF; /* Línea debajo del título */
+    border-bottom: 2px solid #0000FF; /* Línea debajo del título */
     padding-bottom: 20px; /* Aumenta el espacio adicional debajo del h1 */
     margin-bottom: 30px; /* Agrega margen inferior para más espacio */
     animation: elegant-blink 2s infinite; /* Añade el efecto de parpadeo más elegante */
@@ -112,9 +116,9 @@ body {
 .ofertas-titulo {
     font-size: 40px; /* Aumenta el tamaño del texto */
     font-weight: bold;
-    color: #00CCFF; /* Mantiene el color original */
+    color: #0000FF; /* Mantiene el color original */
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); /* Agrega sombra al texto */
-    border-bottom: 2px solid #00CCFF; /* Línea debajo del título */
+    border-bottom: 2px solid #0000FF; /* Línea debajo del título */
     padding-bottom: 20px; /* Espacio adicional debajo del h1 (ajusta según necesites) */
     text-align: center; /* Asegúrate de que esté centrado */
     margin: 0; /* Elimina el margen por defecto */
@@ -140,7 +144,7 @@ body {
     height: 400px;
     background: #FFFFFF;
     border-radius: 20px;
-    box-shadow: 0 0 8px #669BBC;
+    box-shadow: 0 0 8px #0000FF;
     margin: 10px;
     padding: 10px 20px;
     display: flex;
@@ -194,12 +198,12 @@ body {
     border-radius: 20px;
     font-size: 18px;
     line-height: 40px;
-    border: 2px solid #669BBC;
+    border: 2px solid #0000FF;
     transition: color 0.2s;
 }
 
 .pequeña_tarjeta i:hover {
-    color: #669BBC;
+    color: #0000FF;
 }
 
 .product_text {
@@ -215,7 +219,7 @@ body {
 }
 
 .product_text p {
-    color: cadetblue;
+    color: #0000FF;
     line-height: 21px;
     margin: 8px 0;
 }
@@ -232,7 +236,7 @@ body {
 
 .product_text .btn {
     padding: 10px 20px;
-    background: rgb(102,155,188);
+    background: #0000FF;
     cursor: pointer;
     text-decoration: none;
 }
