--- a/Proyect_final/client/views/home.hbs
+++ b/Proyect_final/client/views/home.hbs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css" />
-    <title>StyleHub - Ecommerce</title>
-    <link rel="icon" type="image/png" href="media/logo.png">
+    <title>PixelPoint</title>
+    <link rel="icon" type="image/png" href="media/img/logo-ecommerce.png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <script src="https://sdk.mercadopago.com/js/v2"></script>
@@ -15,8 +15,8 @@
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <!-- Logo -->
             <div class="flex items-center space-x-2">
-                <img src="media/logo.png" alt="StyleHub Logo" class="h-10 w-10">
-                <span class="text-3xl font-extrabold tracking-tight text-gray-900">StyleHub</span>
+                <img src="/client/media/img/logo-ecommerce.png" alt="PixelPoint logo" class="h-10 w-10">
+                <span class="text-3xl font-extrabold tracking-tight text-gray-900">PixelPoint</span>
             </div>
 
             <!-- Navigation Links -->
